# pryeact

./: pyproject.toml  setup.cfg
src/pryeact/: pryeact.py
