[metadata]
name = pryeact
version = 0.0.1
author = Vinícius de Sousa Carvalho
author_email = sousav387@gmail.com
description = componentization using pyqt5
long_description = file: README.md
long_description_content_type = text/markdonw
url = https://github.com/viniciussousa891/pryeact
project_urls =
    bug Tracker = https://github.com/viniciussousa891/pryeact/issues
classifiers =
